# sattosat

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  USAGE.md  USAGE_SCRIPTS.md  USAGE_UI.md  blog-posts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  specs.md  vite.config.ts
e2e/: satellite-selection.spec.ts
public/data/input/: profiles.json
public/data/output/: conjunctions-WV3-STARLINK35956-Picture-python.csv  conjunctions-WV3-STARLINK35956-Picture-typescript.csv
python/: compare_with_spacetrack.py  conjunctions.py  envelope_analysis.py  envelope_theory.py  fetch_spacetrack.py  pyproject.toml  requirements.txt  satellite_pairs.json  scan_alaska.py  scan_dec17.py  verify_conjunction.py  wv3_maneuver_analysis.py
python/investigation/: README.md  backpropagate_dec19.py  compare_with_spacetrack.py  scan_alaska.py  scan_dec17.py  starlink_dec19_postanomaly.tle  verify_conjunction.py  wv3_maneuver_analysis.py  wv3_pairs.json
python/sample_output/: envelope_40115_60330.json
scripts/: capture-screenshots.ts  capture-usage-screenshots.ts  compare-conjunctions.py  conjunctions.ts  fix-screenshots.ts  verify-conjunctions.ts
src/: App.tsx  index.css
src/hooks/: useConjunctions.ts  useSatelliteCatalog.ts  useSatellitePosition.ts  useTLE.ts
src/lib/: celestrak.ts  conjunctions.ts  embeddedTles.ts  oracle.test.ts  orbit.test.ts  orbit.ts  profiles.json  profiles.ts  recentSatellites.ts  relativeView.ts  sun.ts  vectorMath.ts
src/types/: satellite.ts  tlejs.d.ts
(+20 files in other folders)
